--- a/Artywiz/etape-1-new.html
+++ b/Artywiz/etape-1-new.html
@@ -105,12 +105,12 @@
                             <td align="center">
                     <![endif]-->
                                 <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif; padding-top: 20px;">
-                                    <div style="display: inline-block; width:49%; max-width:49%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(49%); width:calc(480px - 100%); min-width:calc(49%);vertical-align: bottom; padding: 20px 0; text-align: left;">
+                                    <div style="display: inline-block; width:48%; max-width:48%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(48%); width:calc(480px - 100%); min-width:calc(48%);vertical-align: bottom; padding: 20px 0; text-align: left;">
                                         <a href="https://artywiz.io/" target="_blank">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582171269/etape-1/logo.png" alt="">
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582171269/etape-1/logo.png" alt="" width="150">
                                         </a>
                                     </div>
-                                    <div style="display: inline-block; width:49%; max-width:49%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(49%); width:calc(480px - 100%); min-width:calc(49%); padding: 10px 0; text-align: right;">
+                                    <div style="display: inline-block; width:48%; max-width:48%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(48%); width:calc(480px - 100%); min-width:calc(48%); padding: 10px 0; text-align: right;">
                                         <a href="https://lgef.fff.fr/" target="_blank">
                                             <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582171269/etape-1/lgef-logo.png" alt="">
                                         </a>
@@ -264,7 +264,7 @@
                             <td>
                     <![endif]-->
                                 <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(100%); width:calc(480px - 100%); min-width:calc(100%);">
-                                    <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/etape1banner.png" alt="" style="width: 100%; margin-bottom: 40px;">
+                                    <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582192056/etape-1/etape1banner.png" alt="" style="width: 100%; margin-bottom: 40px;">
                                 </div>
                     <!--[if mso]>
                             </td>
@@ -273,7 +273,11 @@
                             <td align="center">
                     <![endif]-->
                                 <div style="Margin: 0 30px 40px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/ball.png" alt="" style="width: 100%; margin-bottom: 40px;">
+                                    <p style="text-align: left; margin: 0; margin-bottom: 30px; font-family: Roboto; font-size: 13px; font-weight: bold; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; color: #2d2e2e;">
+                                        LE LOGO DE VOTRE CLUB <br>
+                                        EST LA PIERRE ANGULAIRE <br>
+                                        DE VOTRE COMMUNICATION
+                                    </p>
                                     <p style="text-align: left; margin: 0; margin-bottom: 30px; font-family: Roboto; font-size: 15px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; color: #607d8b;">
                                         ARTYWIZ vous permet de composer votre logo ou de l’importer s'il existe. Une série de documents prêts à l'emploi et intégrant votre logo vous seront automatiquement proposés.
                                     </p>
