--- a/Artywiz/etape-1-new.html
+++ b/Artywiz/etape-1-new.html
@@ -128,14 +128,16 @@
                                     </h1>
                                 </div>
                                 <div style="text-align:center; font-size:0; background-color: #ffffff; border-radius: 10px;">
-                                    <div align="center" style="background: url(https://res.cloudinary.com/dw1zug8d6/image/upload/v1581566005/etape-1/layout.png); width: 100%; height: 250px; background-repeat: no-repeat; background-size: cover; background-position: bottom; margin-bottom: 16px;">
-                                        <img src="https://res.cloudinary.com/deovmejag/image/upload/v1570177252/Artywiz/illustration-player.png" width="100%" alt="" style="width:190px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(70%);">
+                                    <div align="center" style="background: url(https://res.cloudinary.com/dw1zug8d6/image/upload/v1581566005/etape-1/layout.png); width: 100%; height: auto; padding-bottom: 7%; background-repeat: no-repeat; background-size: cover; background-position: bottom; margin-bottom: 16px;">
+                                        <img src="https://res.cloudinary.com/deovmejag/image/upload/v1570177252/Artywiz/illustration-player.png" width="100%" alt="" style="width: 190px; max-width: 80%; width: -webkit-calc(700px - 100%); min-width: -webkit-calc(190px); width: calc(700px - 100%); min-width: calc(70%);">
                                     </div>
                                 </div>
                                 <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(100%);">
                                         <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0; color: #607d8b;">
-                                            ARTYWIZ est l’outil gratuit mis à la disposition des clubs par la LGEF pour créer et animer l’ensemble de leur communication. <br><br>Imprimés, internet, réseaux sociaux, accessoires de sport… tout est prévu pour professionnaliser la communication de votre club et pour valoriser vos équipes et vos sponsors!
+                                            ARTYWIZ est un outil en ligne gratuit, mis à la disposition des clubs de football par la LGEF pour créer et animer l’ensemble de leur communication. <br><br>
+
+                                            Réalisez vous mêmes imprimés, communication internet ou accessoires de sport..… ARTYWIZ a tout prévu pour professionnaliser la communication de votre club et pour valoriser vos équipes et vos sponsors, en toute simplicité!
                                         </p>
                                     </div>
                                 </div>
@@ -274,9 +276,7 @@
                     <![endif]-->
                                 <div style="Margin: 0 30px 40px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <p style="text-align: left; margin: 0; margin-bottom: 30px; font-family: Roboto; font-size: 13px; font-weight: bold; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; color: #2d2e2e;">
-                                        LE LOGO DE VOTRE CLUB <br>
-                                        EST LA PIERRE ANGULAIRE <br>
-                                        DE VOTRE COMMUNICATION
+                                        VOTRE LOGO EST LA PIERRE ANGULAIRE  DE VOTRE COMMUNICATION
                                     </p>
                                     <p style="text-align: left; margin: 0; margin-bottom: 30px; font-family: Roboto; font-size: 15px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; color: #607d8b;">
                                         ARTYWIZ vous permet de composer votre logo ou de l’importer s'il existe. Une série de documents prêts à l'emploi et intégrant votre logo vous seront automatiquement proposés.
@@ -368,27 +368,18 @@
                             <td align="center">
                     <![endif]-->
                                 <div style="Margin: 0 30px 40px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: bold; color: #0073ff; margin: 0 0 20px;">NOS PARTENAIRES</p>
+                                    <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: bold; color: #0073ff; margin: 0 0 20px;">
+                                        NOS PARTENAIRES
+                                    </p>
                                     <div style="Margin:0 auto; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif; margin: 0 0 40px;">
                                     <!--[if mso]>
                                         <table width="100%" align="left" cellspacing="0" cellpadding="0" border="0" class="responsive-table" style="padding-bottom: 80px;">
                                             <tr>
-                                                <td style="text-align: left; padding-left: 30px;">
-                                    <![endif]-->
-                                                    <div style="display: inline-block; width:190px; max-width:40%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(30%); width:calc(480px - 100%); min-width:calc(30%); margin: 5px;">
-                                                        <a href="https://lgef.fff.fr/" target="_blank">
-                                                            <img width="80" src="https://res.cloudinary.com/deovmejag/image/upload/v1570500178/Artywiz/lgef.png" alt="" style="
-                                                                padding-bottom: 20px;
-                                                            ">
-                                                        </a>
-                                                    </div>
-                                    <!--[if mso]>
-                                                </td>
                                                 <td style="text-align: center;">
                                     <![endif]-->
-                                                    <div style="display: inline-block; width:190px; max-width:40%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(30%); width:calc(480px - 100%); min-width:calc(30%); margin: 5px;">
+                                                    <div style="display: inline-block; width:190px; max-width:49%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(49%); width:calc(480px - 100%); min-width:calc(49%); margin: 0px; text-align: center;">
                                                         <a href="https://www.adetem.org/" target="_blank">
-                                                            <img width="84" src="https://res.cloudinary.com/deovmejag/image/upload/v1570500247/Artywiz/adetem.png" alt="" style="
+                                                            <img width="90" src="https://res.cloudinary.com/deovmejag/image/upload/v1570500247/Artywiz/adetem.png" alt="" style="
                                                                 padding-bottom: 20px;
                                                             ">
                                                         </a>
@@ -397,9 +388,9 @@
                                                 </td>
                                                 <td style="text-align: right; padding-right: 30px;">
                                             <![endif]-->
-                                                    <div style="display: inline-block; width:190px; max-width:40%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(30%); width:calc(480px - 100%); min-width:calc(30%); margin: 5px;">
+                                                    <div style="display: inline-block; width:190px; max-width:49%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(49%); width:calc(480px - 100%); min-width:calc(49%); margin: 0px; text-align: center;">
                                                         <a href="https://www.groupama.fr/" target="_blank">
-                                                            <img width="77" src="https://res.cloudinary.com/deovmejag/image/upload/v1570500300/Artywiz/groupama.png" alt="" style="
+                                                            <img width="90" src="https://res.cloudinary.com/deovmejag/image/upload/v1570500300/Artywiz/groupama.png" alt="" style="
                                                                 padding-bottom: 20px;
                                                             ">
                                                         </a>
@@ -742,8 +733,11 @@
                     <!-- Footer -->
                     <div style="Margin:0 auto; text-align: center; margin: 0 30px; Margin:0 auto; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                         <div style="width:190px; max-width:80%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(190px); width:calc(480px - 100%); min-width:calc(80%); margin: auto;">
-                            <a href="https://artywiz.io/" target="_blank">
+                            <a href="https://artywiz.io/" target="_blank" style="text-decoration: none;">
                                 <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1581565601/etape-1/logo-black.png" alt="" style="margin-bottom: 41px;">
+                            </a>
+                            <a href="https://lgef.fff.fr/" target="_blank">
+                                <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582253821/etape-1/lgef-footer.png" alt="" style="width: 70px; margin-bottom: 30px; margin-left: 60px;">
                             </a>
                             <div>
                                 <a href="https://www.facebook.com/artyplanet.io/" target="_blank" style="text-decoration: none;">
@@ -753,6 +747,9 @@
                                     <img width="20" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1581907069/etape-1/globe-outline.png" alt="">
                                 </a>
                             </div>
+                            <p style="font-family: Roboto; font-size: 13px; font-weight: normal; color: #66798f; margin-top: 10px;">
+                                Animez la communication de votre club!
+                            </p>
                             <hr style="margin: 28px 0; background: #D8D8D8; height: 1px; border: none;">
                             <p style="font-family: Roboto; font-size: 13px; font-weight: normal; color: #66798f; margin-top: 0; margin-bottom: 20px;">Copyright ©2020 Artywiz. Tous droids réservés. <br>21 Route de la Wantzenau, F-67800 HOENHEM</p>
                             <p style="font-family: Roboto; font-size: 12px; font-weight: normal; color: #66798f; margin: 0; margin-bottom: 30px;">se désabonner</p>
