Create email etape 2 new
Create email etape 2 new

--- a/Artywiz/etape-2-new.html
+++ b/Artywiz/etape-2-new.html
@@ -104,17 +104,8 @@
                         <tr>
                             <td align="center">
                     <![endif]-->
-                                <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif; padding-top: 20px;">
-                                    <div style="display: inline-block; width:48%; max-width:48%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(48%); width:calc(480px - 100%); min-width:calc(48%);vertical-align: bottom; padding: 20px 0; text-align: left;">
-                                        <a href="https://artywiz.io/" target="_blank">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582171269/etape-1/logo.png" alt="" width="150">
-                                        </a>
-                                    </div>
-                                    <div style="display: inline-block; width:48%; max-width:48%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(48%); width:calc(480px - 100%); min-width:calc(48%); padding: 10px 0; text-align: right;">
-                                        <a href="https://lgef.fff.fr/" target="_blank">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582171269/etape-1/lgef-logo.png" alt="">
-                                        </a>
-                                    </div>
+                                <div style="text-align: center; margin-bottom: 35px;">
+                                    <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582685475/etape-2/bg-etape-2.png" alt="">
                                 </div>
                     <!--[if mso]>
                             </td>
@@ -122,22 +113,26 @@
                         <tr>
                             <td>
                     <![endif]-->
-                                <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <h1 style="font-family: adamcgpro; font-weight: normal; text-align: center;font-size: 24px; color: #419bf9;margin-top: 40px; margin-top: 39px; margin-bottom: 33px;">
-                                        Animez <br> la communication <br> de votre club!
-                                    </h1>
-                                </div>
-                                <div style="text-align:center; font-size:0; background-color: #ffffff; border-radius: 10px;">
-                                    <div align="center" style="background: url(https://res.cloudinary.com/dw1zug8d6/image/upload/v1581566005/etape-1/layout.png); width: 100%; height: auto; padding-bottom: 7%; background-repeat: no-repeat; background-size: cover; background-position: bottom; margin-bottom: 16px;">
-                                        <img src="https://res.cloudinary.com/deovmejag/image/upload/v1570177252/Artywiz/illustration-player.png" width="100%" alt="" style="width: 190px; max-width: 80%; width: -webkit-calc(700px - 100%); min-width: -webkit-calc(190px); width: calc(700px - 100%); min-width: calc(70%);">
-                                    </div>
+                                <div style="text-align:center; font-size:0; background-color: #ffffff; border-radius: 10px; margin-bottom: 30px;">
+                                    <img src="https://res.cloudinary.com/deovmejag/image/upload/v1570177252/Artywiz/illustration-player.png" width="100%" alt="" style="width: 190px; max-width: 80%; width: -webkit-calc(700px - 100%); min-width: -webkit-calc(190px); width: calc(700px - 100%); min-width: calc(70%);">
                                 </div>
                                 <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(100%);">
                                         <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0; color: #607d8b;">
-                                            ARTYWIZ est un outil en ligne gratuit, mis à la disposition des clubs de football par la LGEF pour créer et animer l’ensemble de leur communication. <br><br>
+                                            ARTYWIZ Football a été conçu pour vous faire gagner! <br><br>
 
-                                            Réalisez vous mêmes imprimés, communication internet ou accessoires de sport..… ARTYWIZ a tout prévu pour professionnaliser la communication de votre club et pour valoriser vos équipes et vos sponsors, en toute simplicité!
+                                            Avec ARTYWIZ vous gagnez du temps (il est simple d’utilisation et automatisé), vous gagnez de l’argent (Vos sponsors sont visibles sur tous les supports créés sur Artywiz) et vous gagnez en richesse et en qualité de communication! <br><br>
+
+                                            Des modèles de documents personnalisables et déclinés sur tous les supports actuels sont disponibles pour que vous puissiez – en quelques clics – faire des annonces de Matchs, communiquer des résultats, organiser des évènements ou lancer une nouvelle saison. <br><br>
+
+                                            Jusqu’au 31 décembre, La LGEF et GROUPAMA Grand-Est vous offrent un essai gratuit (*) à ARTYWIZ Football, intégrant un accompagnement personnalisé… profitez-en! <br>
+                                            Nous sommes à votre disposition par email et par téléphone si vous avez besoin d’aide dans la prise en main d’ARTYWIZ pour votre club. <br><br>
+
+                                            (*) Au delà de cette période, à partir du premier janvier 2020, l’abonnement mensuel à ARTYWIZ Football sera de 12€ ttc par mois et par club.
+                                        </p>
+                                        <hr style="height: 1.5px; border: none; background: #D8D8D8; margin: 30px 0;">
+                                        <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0; color: #607d8b;">
+                                            N’hésitez plus, rendez-vous sur Artywiz.io, et n’oubliez pas que nous sommes à votre disposition par email ou par téléphone si vous avez besoin d’aide dans la prise en main d’Artywiz pour votre club.
                                         </p>
                                     </div>
                                 </div>
@@ -206,7 +201,7 @@
                     <![endif]-->
                                 <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(100%);">
-                                        <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 30px; color: #607d8b;">
+                                        <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 65px; color: #607d8b;">
                                             Remarque : vous pouvez transmettre cet email aux personnes en charge de la communication de votre club!
                                         </p>
                                     </div>
@@ -216,6 +211,58 @@
                         </tr>
                         <tr>
                             <td align="center">
+                    <![endif]-->
+                                <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(100%);">
+                                        <h2 style="font-size: 20px; font-weight: bold; line-height: 1.25; color: #2d2e2e; text-transform: uppercase; margin: 0; margin-bottom: 15px; margin-left: 30px;">Annoncer les matchs <br>de vos équipes</h2>
+                                        <img width="460" src="https://res.cloudinary.com/deovmejag/image/upload/v1570177903/Artywiz/stadion-annoncez.png" alt="" style="margin-bottom: 15px;">
+                                        <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 22px; color: #607d8b;">
+                                            Aujourd’hui, découvrez comment faire des annonces de matchs de véritables évènements au sein de votre club et auprès de son public : <br><br>
+
+                                            1. Saisissez les détails du match, le nom de l’adversaire, choisissez les sponsors à valoriser, entrez votre message… <br><br>
+
+                                            2. ARTYWIZ va automatiquement créer pour vous toute une série de documents prêts à être publiés ou imprimés : Publication pour les réseaux sociaux, flyer, affiche A4, newsletter… <br><br>
+
+                                            Pour en savoir plus, visualisez notre démo ou connectez-vous pour passer à l’action!
+                                        </p>
+                                    </div>
+                                </div>
+                    <!--[if mso]>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td align="center">
+                    <![endif]-->
+                                <div style="Margin: 0 30px 15px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mockup-carte.png"/>
+                                    </div>
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103607/etape-1/mockup-avatar.png"/>
+                                    </div>
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mockup-vetement.png"/>
+                                    </div>
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mockup-sacs.png"/>
+                                    </div>
+                                </div>
+                    <!--[if mso]>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td align="center">
+                    <![endif]-->
+                                <div style="Margin: 0 30px 20px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
+                                    <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 22px; color: #607d8b;">
+                                        Pour en savoir plus, visualisez notre démo ou connectez-vous pour passer à l’action!
+                                    </p>
+                                </div>
+                    <!--[if mso]>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding: 0 10px;" align="center">
                     <![endif]-->
                                 <div style="Margin: 0 30px 40px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif; border: 1px solid #d8d8d8; text-align: center;">
                                     <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(100%); width:calc(480px - 100%); min-width:calc(100%); padding: 15px 0;">
@@ -261,49 +308,6 @@
                                             </tr>
                                         </table>
                                     <![endif]-->
-                                    </div>
-                                </div>
-                    <!--[if mso]>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                    <![endif]-->
-                                <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(100%); width:calc(480px - 100%); min-width:calc(100%);">
-                                    <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582192056/etape-1/etape1banner.png" alt="" style="width: 100%; margin-bottom: 40px;">
-                                </div>
-                    <!--[if mso]>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td align="center">
-                    <![endif]-->
-                                <div style="Margin: 0 30px 40px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <p style="text-align: left; margin: 0; margin-bottom: 30px; font-family: Roboto; font-size: 13px; font-weight: bold; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; color: #2d2e2e;">
-                                        VOTRE LOGO EST LA PIERRE ANGULAIRE  DE VOTRE COMMUNICATION
-                                    </p>
-                                    <p style="text-align: left; margin: 0; margin-bottom: 30px; font-family: Roboto; font-size: 15px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; color: #607d8b;">
-                                        ARTYWIZ vous permet de composer votre logo ou de l’importer s'il existe. Une série de documents prêts à l'emploi et intégrant votre logo vous seront automatiquement proposés.
-                                    </p>
-                                </div>
-                    <!--[if mso]>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td style="padding: 0 10px;" align="center">
-                    <![endif]-->
-                                <div style="Margin: 0 30px 40px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 5px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mockup-carte.png"/>
-                                    </div>
-                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 5px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103607/etape-1/mockup-avatar.png"/>
-                                    </div>
-                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 5px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mockup-vetement.png"/>
-                                    </div>
-                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 5px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mockup-sacs.png"/>
                                     </div>
                                 </div>
                     <!--[if mso]>
@@ -752,7 +756,7 @@
                                 </a>
                             </div>
                             <p style="font-family: Roboto; font-size: 13px; font-weight: normal; color: #66798f; margin-top: 10px;">
-                                Animez la communication de votre club!
+                                Annoncez les matchs de vos équipes
                             </p>
                             <hr style="margin: 28px 0; background: #D8D8D8; height: 1px; border: none;">
                             <p style="font-family: Roboto; font-size: 13px; font-weight: normal; color: #66798f; margin-top: 0; margin-bottom: 20px;">Copyright ©2020 Artywiz. Tous droids réservés. <br>21 Route de la Wantzenau, F-67800 HOENHEM</p>
