--- a/Artywiz/etape-2-new.html
+++ b/Artywiz/etape-2-new.html
@@ -235,16 +235,16 @@
                     <![endif]-->
                                 <div style="Margin: 0 30px 15px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mockup-carte.png"/>
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570178315/Artywiz/mockup-ex-annoncez-1.png"/>
                                     </div>
                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103607/etape-1/mockup-avatar.png"/>
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570179147/Artywiz/mockup-ex-annoncez-4.png"/>
                                     </div>
                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mockup-vetement.png"/>
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570179018/Artywiz/mockup-ex-annoncez-3.png"/>
                                     </div>
                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582103606/etape-1/mockup-sacs.png"/>
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582698632/Email%20Launching/mockup-ex-annoncez-2_1.png"/>
                                     </div>
                                 </div>
                     <!--[if mso]>
