--- a/Artywiz/etape-3-new.html
+++ b/Artywiz/etape-3-new.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!--<![endif]-->
     <title>Communiquez les résultats des matchs de vos équipes</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://res.cloudinary.com/dw1zug8d6/raw/upload/v1581568384/fonts/adam.cg%20pro/stylesheet.css">
     <style>
         @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap');
@@ -105,7 +105,7 @@
                             <td align="center">
                     <![endif]-->
                                 <div style="text-align: center; margin-bottom: 35px;">
-                                    <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582685475/etape-2/bg-etape-2.png" alt="">
+                                    <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582699651/etape-3/bg-etape-3.png" alt="">
                                 </div>
                     <!--[if mso]>
                             </td>
@@ -121,11 +121,13 @@
                                         <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0; color: #607d8b;">
                                             ARTYWIZ Football a été conçu pour vous faire gagner! <br><br>
 
-                                            Avec ARTYWIZ vous gagnez du temps (il est simple d’utilisation et automatisé), vous gagnez de l’argent (Vos sponsors sont visibles sur tous les supports créés sur Artywiz) et vous gagnez en richesse et en qualité de communication! <br><br>
+                                            Non pas des matches, c’est du ressort de vos équipes, mais du temps (Artywiz est simple d’utilisation, et automatisé), de l’argent (Artywiz est conçu pour intégrer vos sponsors sur tous les documents et développer les revenus du sponsoring), et une communication de qualité pour votre Club. <br><br>
 
-                                            Des modèles de documents personnalisables et déclinés sur tous les supports actuels sont disponibles pour que vous puissiez – en quelques clics – faire des annonces de Matchs, communiquer des résultats, organiser des évènements ou lancer une nouvelle saison. <br><br>
+                                            Des modèles de documents personnalisables sont disponibles pour que vous puissiez – en quelques minutes – faires des annonces de Matchs, organiser des évènements ou lancer une nouvelle saison… en valorisant les sponsors du club sur chaque support de communication! <br><br>
 
-                                            Jusqu’au 31 décembre, La LGEF et GROUPAMA Grand-Est vous offrent un essai gratuit (*) à ARTYWIZ Football, intégrant un accompagnement personnalisé… profitez-en! <br>
+                                            ARTYWIZ Football démarre en Septembre 2019, et intègre déjà une trentaine de documents prêts à être utilisés, qui seront complétés par d’autres modèles pour atteindre une cinquantaine d’ici à la fin de l’année. <br><br>
+
+                                            Pendant cette période, ARTYWIZ, La LGEF et GROUPAMA Grand-Est vous offrent un essai gratuit (*) à ARTYWIZ Football, intégrant un accompagnement personnalisé… profitez-en! <br>r>
                                             Nous sommes à votre disposition par email et par téléphone si vous avez besoin d’aide dans la prise en main d’ARTYWIZ pour votre club. <br><br>
 
                                             (*) Au delà de cette période, à partir du premier janvier 2020, l’abonnement mensuel à ARTYWIZ Football sera de 12€ ttc par mois et par club.
@@ -212,16 +214,32 @@
                         <tr>
                             <td align="center">
                     <![endif]-->
-                                <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(100%);">
-                                        <h2 style="font-size: 20px; font-weight: bold; line-height: 1.25; color: #2d2e2e; text-transform: uppercase; margin: 0; margin-bottom: 15px; margin-left: 30px;">Annoncer les matchs <br>de vos équipes</h2>
-                                        <img width="460" src="https://res.cloudinary.com/deovmejag/image/upload/v1570177903/Artywiz/stadion-annoncez.png" alt="" style="margin-bottom: 15px;">
-                                        <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 22px; color: #607d8b;">
-                                            Aujourd’hui, découvrez comment faire des annonces de matchs de véritables évènements au sein de votre club et auprès de son public : <br><br>
+                                <div style="Margin: 0 30px 15px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px; vertical-align: top;">
+                                        <h2 style="font-size: 20px; font-weight: bold; line-height: 1.25; color: #2d2e2e; text-transform: uppercase; margin: 0; margin-bottom: 15px; margin-left: 30px;">
+                                            COMMUNIQUER <br>
+                                            LES RÉSULTATS <br>
+                                            DES MATCHS <br>
+                                            DE VOS ÉQUIPES
+                                        </h2>
+                                    </div>
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
+                                        <img width="253" src="https://res.cloudinary.com/deovmejag/image/upload/v1570501338/Artywiz/stadion-communiquer.png" alt="">
+                                    </div>
+                                </div>
+                    <!--[if mso]>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td align="center">
+                    <![endif]-->
+                                <div style="Margin: 0 30px 15px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(100%); width:calc(600px  - 100%); min-width:calc(100%); margin: 2px;">
+                                        <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 30px; color: #607d8b;">
+                                            Aujourd’hui, découvrez comment partager simplement les résultats des matchs de vos équipes: <br><br>
 
-                                            1. Saisissez les détails du match, le nom de l’adversaire, choisissez les sponsors à valoriser, entrez votre message… <br><br>
-
-                                            2. ARTYWIZ va automatiquement créer pour vous toute une série de documents prêts à être publiés ou imprimés : Publication pour les réseaux sociaux, flyer, affiche A4, newsletter… <br><br>
+                                            Importez automatiquement les informations du match si vous aviez fait une annonce, siasissez le score, les buteurs, puis choisissez les sponsors… <br>
+                                            ARTYWIZ va automatiquement créer pour vous une série de documents prêts à être publiés sur les réseaux sociaux ou envoyés par mails… <br><br>
 
                                             Pour en savoir plus, visualisez notre démo ou connectez-vous pour passer à l’action!
                                         </p>
@@ -254,7 +272,7 @@
                             <td align="center">
                     <![endif]-->
                                 <div style="Margin: 0 30px 20px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 22px; color: #607d8b;">
+                                    <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 20px; color: #607d8b;">
                                         Pour en savoir plus, visualisez notre démo ou connectez-vous pour passer à l’action!
                                     </p>
                                 </div>
@@ -264,7 +282,7 @@
                         <tr>
                             <td style="padding: 0 10px;" align="center">
                     <![endif]-->
-                                <div style="Margin: 0 30px 40px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif; border: 1px solid #d8d8d8; text-align: center;">
+                                <div style="Margin: 0 30px 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif; border: 1px solid #d8d8d8; text-align: center;">
                                     <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(100%); width:calc(480px - 100%); min-width:calc(100%); padding: 15px 0;">
                                     <!--[if mso]>
                                         <table width="100%" cellspacing="0" cellpadding="0" border="0" class="responsive-table">
@@ -758,7 +776,7 @@
                                 </a>
                             </div>
                             <p style="font-family: Roboto; font-size: 13px; font-weight: normal; color: #66798f; margin-top: 10px;">
-                                Annoncez les matchs de vos équipes
+                                Communiquez les résultats des matchs de vos équipes
                             </p>
                             <hr style="margin: 28px 0; background: #D8D8D8; height: 1px; border: none;">
                             <p style="font-family: Roboto; font-size: 13px; font-weight: normal; color: #66798f; margin-top: 0; margin-bottom: 20px;">Copyright ©2020 Artywiz. Tous droids réservés. <br>21 Route de la Wantzenau, F-67800 HOENHEM</p>
